BusOne/src/objects/Approved_Document_vod__c.object
<CustomObject>
    <description>The Approved_Document_vod object is the core object used to persist metadata (with one exception) related to the Approved Email solution. Approved Documents are documents that are internally approved via MLR processes to be distributed by reps to accounts. The Approved_Document_vod object stores the content that reps are allowed to share.</description>
    <fields>
        <fullName>Allow_Any_Product_Fragment_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, it indicates that email fragments across any products can be inserted in the email template.</description>
        <label>Allow Any Product Fragment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allowed_Document_IDs_vod__c</fullName>
        <description>Double semi-colon delimited list of Vault document IDs which are related to the email template.</description>
        <label>Allowed Document IDs</label>
        <length>2100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Audience_vod__c</fullName>
        <description>The target audience for an Events Management template</description>
        <label>Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attendee_vod</fullName>
                </value>
                <value>
                    <fullName>Speaker_vod</fullName>
                </value>
                <value>
                    <fullName>Team_Member_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bcc_vod__c</fullName>
        <description>The &apos;bcc&apos; header email addresses that an Approved Email uses. It can be a constant value or an Approved Email token that resolves to an email address.</description>
        <label>Bcc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Content_Type_vod record associated with the Approved_Document_vod record.</description>
        <label>Content Type</label>
        <referenceTo>Content_Type_vod__c</referenceTo>
        <relationshipLabel>Approved Documents</relationshipLabel>
        <relationshipName>Approved_Document_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Detail group assigned to the Vault document.</description>
        <label>Product Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Approved Documents (Product Group)</relationshipLabel>
        <relationshipName>Approved_Document1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Description_vod__c</fullName>
        <description>Description from Vault of the document.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Host_URL_vod__c</fullName>
        <description>URL for the document viewer for the Vault document.</description>
        <label>Document Host</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_ID_vod__c</fullName>
        <description>External Id used by Veeva CRM.</description>
        <externalId>true</externalId>
        <label>Veeva External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Document_Last_Mod_DateTime_vod__c</fullName>
        <description>Vault Last modified datetime of the document.</description>
        <label>Last Modified in Vault</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Allows_Documents_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, indicates that the Vault Email Template HTML markup contains the {{insertEmailFragments}} markup token and therefore can include Email Fragment inserts.</description>
        <label>Insert Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Domain_vod__c</fullName>
        <description>The Rackspace Email Domain used for this Email Template. Allows emails to be sent authenticated when sent &apos;from&apos; this domain. This field is typically used in global orgs when email templates are used by specific countries, and email domains have country-specific suffixes, eg @company.com, @company.co.uk, @company.de. When NULL, the domain will default to the value in the Approved Email Setting APPROVED_EMAIL_DOMAIN_vod for the Profile of the User.</description>
        <label>Email Domain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Fragment_HTML_vod__c</fullName>
        <description>HTML content for the Vault Email Fragment</description>
        <label>Approved Description HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_From_Address_vod__c</fullName>
        <description>&apos;From&apos; email address that will be used in the Vault Email Template. Will either be set to a constant value or using the {{userEmailAddress}} markup token can be set dynamically to the end user&apos;s email address.</description>
        <label>From Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_From_Name_vod__c</fullName>
        <description>&apos;From&apos; name that will be used in the Vault Email Template. Will either be set to a constant value or using the {{userName}} markup token can be set dynamically to the end user&apos;s full name</description>
        <label>From Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_HTML_1_vod__c</fullName>
        <description>HTML content of an Vault Email Template.</description>
        <label>Email HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_HTML_2_vod__c</fullName>
        <description>HTML content of an Vault Email Template if there is overflow from Email_HTML_1_vod</description>
        <label>Email HTML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_ReplyTo_Address_vod__c</fullName>
        <description>&apos;Reply-to&apos; email address that will be used in the Vault Email Template. Will either be set to a constant value or using the {{userEmailAddress}} markup token can be set dynamically to the end user&apos;s email address.</description>
        <label>Reply to Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_ReplyTo_Name_vod__c</fullName>
        <description>&apos;Reply-to&apos; name that will be used in the Vault Email Template. Will either be set to a constant value or using the {{userName}} markup token can be set dynamically to the end user&apos;s full name.</description>
        <label>Reply to Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject_vod__c</fullName>
        <description>Subject of the Vault Email Template.</description>
        <label>Subject</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_Fragment_Document_ID_vod__c</fullName>
        <description>Vault Id of the Email Template Fragment.</description>
        <label>Email Footer Document ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Fragment_HTML_vod__c</fullName>
        <description>HTML content of the Vault Email Template Fragment. This HTML will be substituted for the {{emailTemplateFragment}} markup token in the main HTML body of the Vault Email Template.</description>
        <label>Email Footer HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engage_Document_Id_vod__c</fullName>
        <description>Field used by Vault to store the related Engage Document Id</description>
        <label>Engage Document Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Events_Management_Subtype_vod__c</fullName>
        <description>Used to indicate the subtype of the approved document for use within the Events Management module</description>
        <label>Events Management Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Save_The_Date_vod</fullName>
                </value>
                <value>
                    <fullName>Reminder_vod</fullName>
                </value>
                <value>
                    <fullName>Invitation_vod</fullName>
                </value>
                <value>
                    <fullName>Follow_Up_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISI_Document_ID_vod__c</fullName>
        <description>Vault ID of the ISI document.</description>
        <label>ISI Document ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Message_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key Message associated with the Approved Document.</description>
        <label>Key Message</label>
        <referenceTo>Key_Message_vod__c</referenceTo>
        <relationshipLabel>Approved Documents</relationshipLabel>
        <relationshipName>Approved_Documents_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>Language attribute from Vault of the document.</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Document_ID_List_vod__c</fullName>
        <description>Delimited list of Vault document Ids which are related to the header Vault document.</description>
        <label>Other Document IDs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Document_ID_vod__c</fullName>
        <description>Vault ID of the PI document.</description>
        <label>PI Document ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Piece_Document_ID_vod__c</fullName>
        <description>Vault ID of the document Piece.</description>
        <label>Piece Document ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Detail product or topic assigned to this Vault document.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Approved Documents</relationshipLabel>
        <relationshipName>Approved_Document_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status from Vault of the document.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staged_vod</fullName>
                </value>
                <value>
                    <fullName>Expired_vod</fullName>
                </value>
                <value>
                    <fullName>Withdrawn_vod</fullName>
                </value>
                <value>
                    <fullName>Approved_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate the survey lookup if the Approved Document will reference surveys</description>
        <label>Survey</label>
        <referenceTo>Survey_vod__c</referenceTo>
        <relationshipLabel>Approved Documents</relationshipLabel>
        <relationshipName>Approved_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>Territory attribute from Vault of the document; can be used by Veeva CRM in sharing rule definitions.</description>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_Document_ID_vod__c</fullName>
        <description>Native Vault Document ID</description>
        <label>Document ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_Instance_ID_vod__c</fullName>
        <description>URL endpoint for the Vault instance from which this document originated.</description>
        <label>Vault ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Approved Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Approved Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approved Documents</pluralLabel>
    <recordTypes>
        <fullName>Case_Template_vod</fullName>
        <active>true</active>
        <description>Indicates the Approved Document that is to be used for Case Emails.</description>
        <label>Case_Template_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>CoBrowse_Invite_Template_vod</fullName>
        <active>true</active>
        <description>Indicates the Approved Document that is to be used for CoBrowse invite Emails.</description>
        <label>CoBrowse_Invite_Template_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Fragment_vod</fullName>
        <active>true</active>
        <description>The source document is a Vault &apos;Email Fragment&apos; doctype. This is an HTML fragment that contains references to 1:M Vault documents. Each instance of an Email Fragment contains 0:M references to strongly typed Related Documents within Vault.</description>
        <label>Email_Fragment_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Receipt_vod</fullName>
        <active>true</active>
        <description>Indicates that the Approved Document is to be used for Email Receipts.</description>
        <label>Email_Receipt_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Template_vod</fullName>
        <active>true</active>
        <description>An Email Template is a Vault document type. Email Templates are root documents that are displayed to Reps when sending emails.</description>
        <label>Email_Template_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Engage_vod</fullName>
        <active>true</active>
        <description>Engage Presentations are CLM Presentations that can be deployed online.</description>
        <label>Engage_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events_Management_vod</fullName>
        <active>true</active>
        <description>Used to store email templates that are available for use on an Event.</description>
        <label>Events_Management_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical_Event_vod</fullName>
        <active>true</active>
        <description>Record type for Email Templates that are only used when sending Approved Emails from a Medical Event</description>
        <label>Medical_Event_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical_Inquiry_Template_vod</fullName>
        <active>true</active>
        <description>Record Type for Email Templates that are only used when sending Approved Emails from a Medical Inquiry.</description>
        <label>Medical_Inquiry_Template_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remote_Meeting_vod</fullName>
        <active>false</active>
        <description>For Remote Meetings</description>
        <label>Remote_Meeting_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>